# moccpplib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deps.txt
cmake/MattSource/: MattSource.cmake
cmake/MattSource/Dependencies/: Dependencies.cmake  GetDependencies.cmake  GetDependency.cmake  GetDepsFile.cmake  GetNexusAddressModel.cmake  GetNexusFile.cmake  GetNexusOS.cmake  GetNexusPlatformCompiler.cmake  GetNexusSettings.cmake
cmake/MattSource/Environment/: DetermineAddressModel.cmake  Environment.cmake  ForceOutOfSourceBuild.cmake
cmake/MattSource/Libraries/: AdjustBoost.cmake  Findcppunit.cmake  Findmoctest.cmake  Libraries.cmake
include/moccpp/: Config.hpp  LibVersion.hpp
include/moccpp/Multithreading/: synchronized.hpp
include/moccpp/System/: cstdio.hpp  ctime.hpp
src/: LibVersion.cpp
src/System/: cstdio.cpp  ctime.cpp
tests/: CMakeLists.txt  Tests.cpp
tests/LibVersion/: CMakeLists.txt  PerfLibVersion.cpp  TestLibVersion.cpp  TestLibVersion.hpp
tests/Multithreading/: TestMultithreading.cpp  TestMultithreading.hpp
tests/System/: CMakeLists.txt  PerfSystem.cpp  TestSystem.cpp  TestSystem.hpp
